# HanabiTelegramBot

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  card.cpp  card.h  coroutineTry  coroutineTry.cpp  deck.cpp  deck.h  docs.typ  game.cpp  game.h  helper.h  makefile  pch.h  player.cpp  player.h  readme.md  server.cpp  session.cpp  session.h  sockets.cpp  sockets.h
common/inc/: pch.h  proto_files.h  sockets.h
common/proto/: Ack.proto  ClientResponse.proto  CreateSessionAck.proto  InfoMessage.proto  JoinRandomSessionAck.proto  JoinSessionAck.proto  StartGame.proto  ack.proto  newConnect.proto
common/src/: sockets.cpp
deprecated/: exampleTCPServer.cpp  sender.py
hanabiGame/src/: game.cpp
hanabiTelegramClient/src/: telegram_client.cpp
hanabi_game/inc/: card.h  deck.h  game.h  handle_client_helpers.h  helper.h  player.h  session.h  sockets_util.h
hanabi_game/src/: deck.cpp  game.cpp  handle_client_helpers.cpp  server.cpp  session.cpp
inc/: client_entry.h  deck.h  helper.h  loadenv.h  pch.h  player.h  sockets.h  telegram_client_coroutine.hpp  telegram_client_pch.h
proto/: newConnect.proto
src/: card.cpp  client.cpp  client_entry.cpp  deck.cpp  game.cpp  player.cpp  server.cpp  session.cpp  sockets.cpp  telegram_client.cpp
tg_client/inc/: client_entry.h  client_entry_helpers.h  client_input_tasks.h  loadenv.h  telegram_client_coroutine.hpp  telegram_client_pch.h  telegram_keyboard.h
tg_client/src/: client_entry.cpp  client_entry_helpers.cpp  client_input_tasks.cpp  telegram_client.cpp  telegram_keyboard.cpp
